--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -1,10 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
-
-$MAIN_COLOR1:#FDF5F4;
-$MAIN_COLOR2:#F4E1DD;
-$MAIN_COLOR3:#BD937B;
-$GOLD_COLOR:#B39365;
-
+@import "./_variables.scss";
+@import "./components/index.scss";
+ 
 /*Обнуление*/
 
 *{
