--- a/client/src/app/components/common/form/radioField/styles/_radioField.scss
+++ b/client/src/app/components/common/form/radioField/styles/_radioField.scss
@@ -1,7 +1,4 @@
-$MAIN_COLOR1:#FDF5F4;
-$MAIN_COLOR2:#F4E1DD;
-$MAIN_COLOR3:#BD937B;
-$GOLD_COLOR:#B39365;
+@import "../../../../../../style/variables";
 .radiofield {
     padding: 10px;
 }
