--- a/client/src/style/components/index.scss
+++ b/client/src/style/components/index.scss
@@ -1,7 +1,8 @@
 @import "../../app/components/ui/clientCard/style/clientCard";
 @import "../../app/components/ui/loginForm/styles/loginForm";
 @import "../../app/components/ui/registerForm/styles/registerForm";
-@import "../../app/components/ui/table/styles/table";
+/* @import "../../app/components/ui/table/styles/table"; */
+@import "../../app/components/ui/trainingInfo/style/trainingInfo";
 @import "../../app/components/ui/trainersCard/styles/trainersCard";
 @import "../../app/components/ui/navBar/styles/navBar"; 
 
@@ -20,3 +21,5 @@
 @import "../../app/components/common/form/textField/styles/textField";
 @import "../../app/components/common/socialMedia/styles/socialMedia";
 @import "../../app/components/common/comments/styles/comments";
+@import "../../app/components/common/ImageSlider/style/imageSlider";
+@import "../../app/components/common/TitleLogo/style/titleLogo";
