--- a/client/src/app/components/page/diary/styles/_diary.scss
+++ b/client/src/app/components/page/diary/styles/_diary.scss
@@ -1,4 +1,20 @@
 @import "../../../../../style/variables";
+.diary__trainer-name{
+    margin: 10px;
+    font-size: 1rem;
+
+}
+.diary__trainer{
+    margin: 40px 20px 20px 40px;
+   color: $MAIN_COLOR3;
+}
+.table__container{
+    width: 800px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    overflow: hidden;
+    
+}
 .diary__trainer .diary-container{
     max-width: 600px;
    
@@ -32,6 +48,7 @@
 .calendar__container{
     margin: 70px 20px 20px 20px;
     height: 420px;
+    max-width: 380px;
 
 }
 .client__container{
