--- a/client/src/app/components/ui/trainersCard/styles/_trainersCard.scss
+++ b/client/src/app/components/ui/trainersCard/styles/_trainersCard.scss
@@ -7,6 +7,7 @@
     color: $MAIN_COLOR3;
     background-color: $MAIN_COLOR1;
     padding: 10px;
+    border-bottom: solid 1px $MAIN_COLOR3;
 }
 .trainers__card-selector{
     padding: 10px;
