--- a/client/src/style/_variables.scss
+++ b/client/src/style/_variables.scss
@@ -5,3 +5,5 @@ $MAIN_COLOR3:#BD937B;
 $MAIN_COLOR4:#e5bbb3;
 $MAIN_COLOR3_BOLD:#7e563e;
 $GOLD_COLOR:#B39365;
+$NUTRITION_COLOR1:#BD937A;
+$NUTRITION_COLOR2:#FDFEEC;
