--- a/client/src/style/_variables.scss
+++ b/client/src/style/_variables.scss
@@ -7,3 +7,8 @@ $MAIN_COLOR3_BOLD:#7e563e;
 $GOLD_COLOR:#B39365;
 $NUTRITION_COLOR1:#BD937A;
 $NUTRITION_COLOR2:#FDFEEC;
+
+.flex {
+    display: flex;
+    justify-content: center;
+}
