--- a/client/src/app/components/page/workouts/styles/_workouts.scss
+++ b/client/src/app/components/page/workouts/styles/_workouts.scss
@@ -1,1 +1,177 @@
 @import "../../../../../style/variables";
+.workouts__container{
+    color: $MAIN_COLOR3;
+    
+    &-block{
+        margin: 30px 40px;
+        color:$MAIN_COLOR3_BOLD;    
+        max-width: 500px;
+        li{
+            margin: 10px 0px;
+            p{
+             margin: 25px 45px;
+             max-width: 250px;
+            }
+        }
+        
+    }
+    &-textBlock{
+        margin: 30px 40px;
+        color:$MAIN_COLOR3_BOLD;    
+        max-width: 500px;
+        display: flex;
+        flex-wrap: wrap;
+        h1 {
+            font-size: 2rem;
+            margin-left: auto;
+            margin-bottom: 30px;
+     
+        }
+        p{
+            background-color: #ef998a28;
+            max-width: 80%;
+            max-height: 150px;
+            &:nth-child(odd){
+                margin-left: auto;
+                max-width: 60%;
+                height: 60px;
+            }
+        }
+
+    }
+   /*  &-image{
+        position: relative;
+       max-width: 100%;
+        height:auto;
+        
+    }
+    &-content{
+         top: 5em; 
+        position: absolute;
+        background-color: #ef998a31;
+        
+        width: 55%;
+        height: 400px; 
+        p {
+          
+            color: $MAIN_COLOR3_BOLD;
+            font-size: 1.7rem; 
+            
+        }
+        
+       
+    } */
+}
+.mainWorkouts__container{
+    color: #814e2f;
+        &-imageContainer{
+            position: relative;
+        }
+        &-image{
+            width: 100%;
+            height: 100%;
+        }
+        &-content{
+                top: 2.6em; 
+                position: absolute;
+                background-color: #ef998a31;
+                width: 67%;
+                height: 400px; 
+            p {
+                
+                color: $MAIN_COLOR3_BOLD;
+                font-size: 1.7rem; 
+                
+            }
+        }
+        &-content1{
+            position:absolute;
+            bottom: 70%;
+            max-width: 50%;
+            right: 0;
+            font-size: 1.5rem;
+            padding: 30px;
+            background-color: #ef998a31;
+        }
+        &-content2{
+            position:absolute;
+            bottom: 5%;
+            background-color: #ef998a31;
+            padding: 20px;
+            b{
+                color: #ef998a;            
+            }
+        }
+
+}
+.content{
+    display: flex;
+    max-width: 55%;
+    margin-left: 55%;
+    &-m{
+        float: right;
+         margin-top: 6rem;
+         justify-content:flex-end;
+     }
+}
+
+.workout-icon{
+    margin-right: 5px;
+}
+.block-list{
+    margin-top: 20px;
+}
+.imageWork__container{
+    position: relative;
+    max-width: 600px;
+    max-height: 800px;
+    &-card{
+        width: 100%;
+        height: 100%;
+    }
+    &-text1{
+        position: absolute;
+        bottom: 74%;
+        right: 0%;
+        max-width: 80%;
+        background-color: #ef998a31;
+        h1 {
+            font-size: 2rem;
+            right: 0;
+            color: #ef998a;
+            text-align: end;
+            padding-bottom: 20px;
+        }
+        h3{
+            color: #ef998a; 
+        }
+        p{
+            color:#814e2f;
+        }
+    }
+    &-text2{
+        position: absolute;
+        bottom: 10%;
+        max-width: 50%;
+        background-color: #ef998a31;
+        h1 {
+            font-size: 2rem;
+            right: 0;
+            color: #ef998a;
+            text-align: center  ;
+            padding-bottom: 20px;
+        }
+        h3{
+            color: #ef998a; 
+        }
+        p{
+            color: #ef998a; 
+
+        }
+    }
+}
+.rewiew__container{
+    background-color: #ef998a15;
+    margin: 50px 0px;
+    padding: 20px 0px;
+}
