trainer page, logo, refactoring

--- a/client/src/app/components/page/about/styles/_about.scss
+++ b/client/src/app/components/page/about/styles/_about.scss
@@ -1,4 +1,12 @@
 @import "../../../../../style/variables";
-.about_img{
-    width: 100%;
+.about__container{
+    display: flex;
+    color: $MAIN_COLOR3_BOLD;
+    &-image{
+        max-width: 800px;
+        max-height: auto;
+    }
+    &-text{
+        
+    }
 }
