--- a/client/src/style/_variables.scss
+++ b/client/src/style/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
 $MAIN_COLOR1:#FDF5F4;
 $MAIN_COLOR2:#F4E1DD;
-$MAIN_COLOR3:#BD937B;
+$MAIN_COLOR3:rgb(189, 147, 122);
 $MAIN_COLOR4:#e5bbb3;
 $MAIN_COLOR3_BOLD:#7e563e;
 $GOLD_COLOR:#B39365;
