--- a/client/src/app/components/ui/trainingForm/style/_trainingForm.scss
+++ b/client/src/app/components/ui/trainingForm/style/_trainingForm.scss
@@ -5,6 +5,16 @@
     padding: 20px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    &-button {
+      background-color: inherit;
+      color: $MAIN_COLOR3;
+      border: solid 1px $MAIN_COLOR3;
+      border-radius: 5px;
+      padding: 5px;
+      width: 120px;
+
+
+    }
     form{
       display: flex;
       
@@ -64,14 +74,10 @@
         
      
    }
-   &-approach{
-      padding: 20px;
-      margin-top: 10px;
-      font-size: 1rem;
-      color: $MAIN_COLOR3     
-   }
+   
 
 }
+
 .exercise{
    &-title{
       overflow: hidden;
@@ -82,6 +88,25 @@
    }
 }
 .trainingRow__container{
+   color: $MAIN_COLOR3;
    display: flex;
-   
+   &-approach{
+      display: flex;
+      padding: 14px ;
+   }
+   &-modal{
+      padding-top: 24px
+   }
+}
+.modalMindows__container{
+   display: flex;
+   margin-top: 10px;
+   font-size: 1rem;
+}
+.approach__cell{
+   margin-left: 25px;
+   &-weight{
+      border-bottom: solid 1px $MAIN_COLOR3;
+   }
+  
 }
