--- a/client/src/app/components/ui/trainingForm/style/_trainingForm.scss
+++ b/client/src/app/components/ui/trainingForm/style/_trainingForm.scss
@@ -12,7 +12,10 @@
       border-radius: 5px;
       padding: 5px;
       width: 120px;
-
+      &:hover{
+         background-color:$MAIN_COLOR2;
+         border-color: $MAIN_COLOR1;
+      }
 
     }
     form{
