work card, prew

--- a/client/src/style/components/index.scss
+++ b/client/src/style/components/index.scss
@@ -6,6 +6,7 @@
 @import "../../app/components/ui/navBar/styles/navBar"; 
 @import "../../app/components/ui/hoc/style/appLoader";
 @import "../../app/components/ui/modal/style/modalWindows";
+@import "../../app/components/ui/workoutCard/style/workoutCard";
 
 @import "../../app/components/page/about/styles/about";
 @import "../../app/components/page/clientPage/styles/clientPage";
