--- a/client/src/app/components/ui/navBar/styles/_navBar.scss
+++ b/client/src/app/components/ui/navBar/styles/_navBar.scss
@@ -1,10 +1,37 @@
 @import "../../../../../style/variables";
+@import "../../../../../style/mixins/response-mixin.scss";
 .header {
+    max-width: 100%;
     background-color: $MAIN_COLOR1;
     font-size: 1rem;
     height: 3em;
     display: flex;
     margin-bottom: 20px;
+    @include laptop{
+        a{
+            font-size: 28px;
+        }
+    }
+    &__logo {
+        display: none;
+        @include laptop {
+            display: block;
+        }
+    }
+    &__socialMedia{
+        @include laptop {
+            display: none;
+        }
+    }
+    &__menuSocialMedia{
+        display: none;
+        margin: 40px;
+        @include laptop {
+            display: block;
+        }
+        
+    }
+    
     &__navbar{
         display: flex;
         justify-content: space-between;
@@ -12,6 +39,26 @@
     }
     &__menu {
         display: flex;
+        align-items: center;
+        z-index: 10;
+        @include laptop {
+
+            background-color: $MAIN_COLOR2;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            position: fixed;
+            left: -100%;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100vh;
+            z-index: 10;
+            transition: left 1s;
+           
+    }
+
     }
     &__item {
         padding: 10px;
@@ -20,20 +67,28 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        &:last-child {
-            border: solid 1px $GOLD_COLOR;
+        /* &:last-child {
+            outline: solid 1px $GOLD_COLOR;
             color: $GOLD_COLOR;
             font-weight: 500;
-        }
+        } */
         &:hover{
-            border: solid 1px $GOLD_COLOR;
+            outline: solid 1px $GOLD_COLOR;
             color: $GOLD_COLOR;
-            font-weight: 500;
         }
         &-active{
+            padding: 10px;
+            border-radius: 0.5em;
+            margin: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             font-weight: 600;
             color: $GOLD_COLOR;
-    
+            &:hover{
+                outline: solid 1px $GOLD_COLOR;
+                color: $GOLD_COLOR;
+            }
         }
     }
 }
@@ -45,4 +100,28 @@ a {
     
 }
 
+.burger{
 
+    display: none;
+    cursor: pointer;
+    @include laptop {
+        display: block;
+        position: absolute;
+        right: 20px;
+        top: 15px;
+        cursor: pointer;
+        z-index: 10;
+    }
+    
+}
+.butterfly{
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    z-index: 10;
+    transform:translate(-50%, -50%);
+
+}
+.active {
+    left: 0;
+  }
