--- a/client/src/app/components/ui/navBar/styles/_navBar.scss
+++ b/client/src/app/components/ui/navBar/styles/_navBar.scss
@@ -1,64 +1,32 @@
 @import "../../../../../style/variables";
 @import "../../../../../style/mixins/response-mixin.scss";
-.header {
+  .header {
     max-width: 100%;
     background-color: $MAIN_COLOR1;
     font-size: 1rem;
     height: 3em;
     display: flex;
     margin-bottom: 20px;
-    @include laptop{
-        a{
-            font-size: 28px;
-        }
+    ul {
+        display: flex;
     }
-    &__logo {
-        display: none;
-        @include laptop {
-            display: block;
-        }
-    }
-    &__socialMedia{
-        @include laptop {
-            display: none;
-        }
-    }
-    &__menuSocialMedia{
-        display: none;
-        margin: 40px;
-        @include laptop {
-            display: block;
-        }
-        
-    }
-    
     &__navbar{
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
+    &__logo {
+        display: none;
+    }
+    &__menuSocialMedia{
+        display: none;
+        margin: 40px;    
+    }
+     
     &__menu {
         display: flex;
         align-items: center;
         z-index: 10;
-        @include laptop {
-
-            background-color: $MAIN_COLOR2;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            position: fixed;
-            left: -100%;
-            right: 0;
-            top: 0;
-            bottom: 0;
-            width: 100%;
-            height: 100vh;
-            z-index: 10;
-            transition: left 1s;
-           
-    }
-
     }
     &__item {
         padding: 10px;
@@ -67,11 +35,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        /* &:last-child {
-            outline: solid 1px $GOLD_COLOR;
-            color: $GOLD_COLOR;
-            font-weight: 500;
-        } */
+
         &:hover{
             outline: solid 1px $GOLD_COLOR;
             color: $GOLD_COLOR;
@@ -96,23 +60,12 @@ a {
     color: $MAIN_COLOR3;
     &:hover{
         color: $GOLD_COLOR;
-    }
-    
+    } 
 }
 
 .burger{
-
     display: none;
-    cursor: pointer;
-    @include laptop {
-        display: block;
-        position: absolute;
-        right: 20px;
-        top: 15px;
-        cursor: pointer;
-        z-index: 10;
-    }
-    
+    cursor: pointer;   
 }
 .butterfly{
     position: absolute;
@@ -120,8 +73,72 @@ a {
     left: 50%;
     z-index: 10;
     transform:translate(-50%, -50%);
-
+    display: none;
 }
-.active {
-    left: 0;
-  }
+
+
+@include laptop {
+    .header { 
+        ul {      
+            display: block;
+        }
+        &__logo {
+            display: block;
+        }
+        a{
+            font-size: 28px;
+        }
+        
+       &__socialMedia{
+            display: none;
+           
+        } 
+        &__menuSocialMedia{
+            display: block;  
+        }
+        &__menu {
+            background-color: $MAIN_COLOR2;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            position: fixed;
+            left: -100%;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100vh;
+            z-index: 10;
+            transition: left 1s;
+        }
+    }
+    .burger{
+            display: block;
+            position: absolute;
+            right: 20px;
+            top: 15px;
+            cursor: pointer;
+            z-index: 10; 
+    }
+    .butterfly{
+            display: block;
+    }
+    .active {
+        left: 0;
+      }
+}
+@media screen and (max-width: 340px) {
+    .butterfly{
+        width: 300px;
+    }
+}
+@media screen and (max-width: 307px) {
+    .header {
+        a{
+            font-size: 20px;
+        }
+    }
+    .butterfly{
+        width: 250px;
+    }
+}
