--- a/client/src/style/components/index.scss
+++ b/client/src/style/components/index.scss
@@ -26,3 +26,5 @@
 @import "../../app/components/common/comments/styles/comments";
 @import "../../app/components/common/ImageSlider/style/imageSlider";
 @import "../../app/components/common/TitleLogo/style/titleLogo";
+@import "../../app/components/common/aboutCard/style/aboutCard";
+@import "../../app/components/common/calendar/style/calendar";
