--- a/client/src/app/components/page/workouts/styles/_workouts.scss
+++ b/client/src/app/components/page/workouts/styles/_workouts.scss
@@ -1,155 +1,231 @@
 @import "../../../../../style/variables";
-.workouts__container{
-    color: $MAIN_COLOR3;
+@import "../../../../../style/mixins/response-mixin.scss";
+.workouts{
+    &__block{
+        position: absolute;
+        top: 15%; 
+        left: 70%;
+        z-index: 2;
+       
+        &-bage{
+            margin: 2em auto;
+            width: max-content;
+            background-color: hsla(0, 0%, 85%, 0.422);
+            padding: 0.4em;
+            color: $GOLD_COLOR;
+            text-align: center;
+            line-height: 1.5em;
+            border-radius: 0.5em;
+        }
+    }
+}
+.workouts__phones{
+    display: none;
+}
+.workouts__info{
+     margin-top: 69%;
+    &-lable{
+        &-logo{
+             &-icon{
+                 text-align: center;
+                 width: 170px;
+                 height: 70px;
+                 opacity: 70%;
+             }
+         }
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &-text{
+            color: $GOLD_COLOR;
+            font-style: italic;
+            font-weight: 400;
+            margin-top: 20px;
+            margin-left: 4px;
+        }
+    }
+}
+.workouts__about{
+    max-width: 1240px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     
-    &-block{
-        margin: 30px 40px;
-        color:$MAIN_COLOR3_BOLD;    
-        max-width: 500px;
-        li{
-            margin: 10px 0px;
-            p{
-             margin: 25px 45px;
-             max-width: 250px;
+}
+@media screen and (max-width: 1135px) {
+    .workouts__block{
+        left: 67%;
+        top: 12%;
+      
+    }
+}
+@media screen and (max-width: 1050px) {
+    .workouts__block{
+        left: 65%;
+        top: 12%;
+    }
+}
+@include laptop {
+    .workouts__block{
+        left: 63%;
+        top: 10%;
+        &-logo{
+            &-icon{
+                width: 300px;
+                height: 130px;
+                opacity: 70%;
             }
         }
-        
     }
-    &-textBlock{
-        margin: 30px 40px;
-        color:$MAIN_COLOR3_BOLD;    
-        max-width: 500px;
+}
+@media screen and (max-width: 810px) {
+    .workouts__block{
+        left: 67%;
+        top: 10%;
+        &-logo{
+            &-icon{
+                width: 200px;
+                height: 100px;
+                opacity: 70%;
+            }
+        }
+        &-bage{
+           font-size: 1rem;
+            padding: 0.4em;
+            color: $GOLD_COLOR;
+            text-align: center;
+            line-height: 1.5em;
+            border-radius: 0.5em;
+        }
+    }
+
+}
+@include tablets {
+    .workouts__info-lable-text{
+        font-size: 1rem;
+    }
+}
+@include phones {
+    .workouts__info-lable-logo-icon{
+        width: 140px;
+        height: 56px;
+    }
+    .workouts__info-lable-text{
+        font-size: 0.8rem;
+    }
+}
+@media screen and (max-width:619px){
+    .workouts{
+        display: none;
+    }
+    .workouts__phones{
+        display: block;
+        position: relative;
+        padding-bottom: 1em;
+        align-items: center;
+        text-align: center;
+        &-image{
+            position: absolute;
+            left: 10%;
+            top: 10%;
+        }
+        &-laptop{
+            position: absolute;
+            top: 1200%;
+            left: 65%;
+        }
+        h1{
+            position: absolute;
+            top: 400%;
+        }
+    }
+    
+}
+.workouts__for{
+    background-color: #EACCC7;
+    padding: 1em 0;
+    color: #472B29;
+
+    &-container{
+        max-width: 1240px;
+        margin: 0 auto;
+        text-align: center;
+        &-header{
+            color: #654532;
+            font-weight: 500;
+            margin-bottom: 1em;
+        }
+        &-cards{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+    }
+}
+.workouts__rate-color{
+    background-color: #EACCC7;
+    padding-bottom: 20px;
+}
+
+.workouts__rate{
+    background-color: white;
+    margin: 0 auto;
+    text-align: center;
+    max-width: 1060px;
+    border-radius: 10px;
+    &-title{
+        color: $GOLD_COLOR;
+        font-weight: 500;
+        padding: 1em;
+    }
+    &-cards{
         display: flex;
         flex-wrap: wrap;
-        h1 {
-            font-size: 2rem;
-            margin-left: auto;
-            margin-bottom: 30px;
-     
-        }
-        p{
-            background-color: #ef998a28;
-            max-width: 80%;
-            max-height: 150px;
-            &:nth-child(odd){
-                margin-left: auto;
-                max-width: 60%;
-                height: 60px;
+        justify-content: center;
+        &-card{
+          max-width: 330px;
+          margin:  10px;
+          font-size: 1rem;
+            &-btn{
+                margin: 0 auto;
+                background-color: #EB9281;
+                padding: 1em;
+                max-width: 270px;
+                border-radius: 20px;
+                color: white;
+                u{
+                    font-size: 0.625rem;
+                }
+                h1{
+                    
+                }
+            }
+            &-text{
+                font-size: 0.8rem;
+                color: $GOLD_COLOR;
+                margin-top: 1.5em;
             }
         }
-
     }
 }
-.mainWorkouts__container{
-    color: #814e2f;
-        &-imageContainer{
-            position: relative;
-        }
-        &-image{
-            width: 100%;
-            height: 100%;
-        }
-        &-content{
-                top: 2.6em; 
-                position: absolute;
-                background-color: #ef998a31;
-                width: 67%;
-                height: 400px; 
-            p {
-                
-                color: $MAIN_COLOR3_BOLD;
-                font-size: 1.7rem; 
-                
-            }
-        }
-        &-content1{
-            position:absolute;
-            bottom: 70%;
-            max-width: 50%;
-            right: 0;
-            font-size: 1.5rem;
-            padding: 30px;
-            background-color: #ef998a31;
-        }
-        &-content2{
-            position:absolute;
-            bottom: 5%;
-            background-color: #ef998a31;
-            padding: 20px;
-            b{
-                color: #ef998a;            
-            }
-        }
-
-}
-.content{
-    display: flex;
-    max-width: 55%;
-    margin-left: 55%;
-    &-m{
-        float: right;
-         margin-top: 6rem;
-         justify-content:flex-end;
-     }
-}
-
-.workout-icon{
-    margin-right: 5px;
-}
-.block-list{
-    margin-top: 20px;
-}
-.imageWork__container{
-    position: relative;
-    max-width: 600px;
-    max-height: 800px;
-    &-card{
-        width: 100%;
-        height: 100%;
-    }
-    &-text1{
-        position: absolute;
-        bottom: 74%;
-        right: 0%;
-        max-width: 80%;
-        background-color: #ef998a31;
-        h1 {
-            font-size: 2rem;
-            right: 0;
-            color: #ef998a;
-            text-align: end;
-            padding-bottom: 20px;
-        }
-        h3{
-            color: #ef998a; 
-        }
-        p{
-            color:#814e2f;
-        }
-    }
-    &-text2{
-        position: absolute;
-        bottom: 10%;
-        max-width: 50%;
-        background-color: #ef998a31;
-        h1 {
-            font-size: 2rem;
-            right: 0;
-            color: #ef998a;
-            text-align: center  ;
-            padding-bottom: 20px;
-        }
-        h3{
-            color: #ef998a; 
-        }
-        p{
-            color: #ef998a; 
-
-        }
+@media screen and (max-width:1170px){
+    .workouts__rate{
+        max-width: 830px;
     }
 }
-.rewiew__container{
-    background-color: #ef998a15;
-    margin: 50px 0px;
-    padding: 20px 0px;
+@media screen and (max-width:910px){
+    .workouts__rate{
+        max-width: 730px;
+    }
+}
+@media screen and (max-width:760px){
+    .workouts__rate{
+        max-width: 350px;
+    }
+}
+@media screen and (max-width:380px){
+    .workouts__rate{
+        margin: 0 15px;
+    }
 }
