--- a/client/src/app/components/common/calendar/calendarGrid/style/_calendarGrid.scss
+++ b/client/src/app/components/common/calendar/calendarGrid/style/_calendarGrid.scss
@@ -6,8 +6,14 @@
     color: $MAIN_COLOR3;
     width: 100%;
     grid-template-columns: repeat(7,1fr);
-    grid-template-rows: repeat(6,1fr);
-
+}
+.calendarCell-header{
+    color: $MAIN_COLOR3_BOLD;
+    min-height: 40px;
+    min-width: 140px;
+    display: flex;
+    justify-content: end;
+    padding: 10px;
 }
 .calendarCell{
     min-height: 80px;
@@ -25,15 +31,11 @@
         justify-content: center;
         align-items: center;
         margin: 2px;
-        
-     
         &-currentDay{
-              background-color: rgba(245, 198, 189, 0.5);
+            background-color: rgba(245, 198, 189, 0.5);
             border-radius: 50%;
-            
-          height: 100%;
+            height: 100%;
             width: 100%; 
-
             display: flex;
             align-items: center;
             justify-content: center;  
@@ -44,4 +46,8 @@
 .isWeekend{
     background-color: rgb(252, 238, 235);
     outline-color: #e0cbc7;
+}
+.isDayOfSelectedMonth{
+    color: $MAIN_COLOR3_BOLD;
+    font-weight: 410;
 }
